vuejs/vuejs-tests/testData/libraries/nuxt/highlighting/nuxtAutoImports/app.vue
<script lang="ts">
useHead<error descr="Invalid number of arguments, expected 1">()</error>;
</script>

<template>
  <div>
    {{<error descr="Invalid number of arguments, expected 1">useHead</error>()}}
    <h1>Hello</h1>
  </div>
</template>